--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
 .App {
   text-align: center;
+  font-family: "Rubik Glitch", cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#calculator-body {
+  background-color: hotpink;
+  padding: 5px 0px;
+  width: 50%;
+  margin: 20px 25%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#display {
+  width: 90%;
+  margin: 10px 5%;
+  padding: 5px 10px;
+  background-color: #b2b8c2;
+  color: #242526;
+  font-size: x-large;
+  text-align: right;
 }
